# shiny-waddle

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  rakefile  run_basic_example.sh  run_tests.sh  task.md
examples/basic/: Items.txt  Writer.txt
examples/basic/initial/: Items.txt
examples/big/: Reader.txt  Reader1.txt  Reader10.txt  Reader2.txt  Reader3.txt  Reader4.txt  Reader5.txt  Reader6.txt  Reader7.txt  Reader8.txt  Reader9.txt  Writer.txt  Writer1.txt  Writer2.txt
include/: IRunnable.h  Runner.h  System.h
include/command/: FileCommandStream.h  ICommandStream.h
include/reader/: Command.h  CommandReader.h  CommandStream.h  ICommandReader.h  Reader.h
include/storage/: FileStorage.h  IStorage.h  LFUCache.h  LRUCache.h  StorageTypes.h  StorageWithLRUCache.h
include/util/: HashMinHeap.h
include/writer/: Command.h  CommandReader.h  CommandStream.h  ICommandReader.h  Writer.h
mock/include/: RunnableMock.h
src/: Runner.cpp  System.cpp  main.cpp
src/reader/: CommandReader.cpp  CommandStream.cpp  Reader.cpp
src/storage/: FileStorage.cpp  LFUCache.cpp  LRUCache.cpp  StorageWithLRUCache.cpp
src/writer/: CommandReader.cpp  CommandStream.cpp  Writer.cpp
test/: CMakeLists.txt
test/src/: RunnerTest.cpp
test/src/reader/: CommandReaderTest.cpp  CommandStreamTest.cpp  ReaderTest.cpp
test/src/storage/: FileStorageTest.cpp  LFUCacheTest.cpp  LRUCacheTest.cpp
test/src/writer/: CommandReaderTest.cpp  CommandStreamTest.cpp  WriterTest.cpp
tools/: generate_test.rb
uml/: reader_writer_seq.plantuml  storage_seq.plantuml
(+5 files in other folders)
